--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-paginate": "^7.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
